--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: Mobs
-version: 1.9 8 b9
+version: 1.2.4 b3
 author: coldandtired
 main: me.coldandtired.mobs.Main
 description: A fully-featured mob control plugin
