--- a/plugin.yml
+++ b/plugin.yml
@@ -1,29 +1,15 @@
 name: Mobs
-version: 1.2.5 b2dev
+version: 1.2.5 b11dev
 author: coldandtired
 main: me.coldandtired.mobs.Main
 description: A fully-featured mob control plugin
-softdepend: [Vault, WorldGuard]
+softdepend: [Vault, WorldGuard, TerrainControl]
 commands:
-    reload_mobs:
-        description: Reloads the config
-        aliases: rm
-        usage: "Usage: /<command>"
     spawn_mobs:
         description: Manually spawn some or all of the auto_spawns
         aliases: sm
         usage: "Usage: /spawn_mob (shortcut)"
-    purge_mobs:
-        description: Manually purge the list of mobs held in memory
-        aliases: pm
-        usage: "Usage: /<command>"
 permissions:
-    mobs.can_reload_mobs:
-        description: Allows reloading the configs
-        default: op
     mobs.can_spawn_mobs:
         description: Allows manual spawning
-        default: op
-    mobs.can_purge_mobs:
-        description: Allows removing any mob older than one hour from the list held in memory
         default: op
