--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,10 @@
 name: Mobs
-version: 1.2.5 b30
+version: 1.2.5 b36dev
 author: coldandtired
 main: me.coldandtired.mobs.Main
 description: A fully-featured mob control plugin
 softdepend: [Vault, WorldGuard, TerrainControl, Heroes]
+database: yes
 commands:
     spawn_mobs:
         description: Manually spawn some or all of the autospawns
